--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <body bgcolor="dfe2e3">
 
 
-<div class ="container">
-    <div class="bkimg">
-    <button class="round"></button>
+<div class="container">
+    <img src = "agr2.png" class="image">
+    <button class="btn1">Услуги</button>
+    <button class="btn2">Цены</button>
+    <button class="btn3">Бронирование</button>
+    <button class="btn4">Контакты</button>
+    <button class="btn5">Фото</button>
+    <button class="btn6">О нас</button>
 </div>
 
 
