--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 
 <div class="container">
     <img src = "agr2.png" class="image">
-    <button class="btn1">Услуги</button>
-    <button class="btn2">Цены</button>
-    <button class="btn3">Бронирование</button>
-    <button class="btn4">Контакты</button>
-    <button class="btn5">Фото</button>
-    <button class="btn6">О нас</button>
+    <button class="btn1"></button>
+    <button class="btn2"></button>
+    <button class="btn3"></button>
+    <button class="btn4"></button>
+    <button class="btn5"></button>
+    <button class="btn6"></button>
+
+    <div class="text1"><b>Услуги</b></div>
+    <div class="text2"><b>Цены</b></div>
+    <div class="text3"><b>Бронирование</b></div>
+    <div class="text4"><b>Контакты</b></div>
+    <div class="text5"><b>Фото</b></div>
+    <div class="text6"><b>О нас</b></div>
 </div>
 
 
