--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
 <head>
   <title>Farmstead</title>
+   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body bgcolor="dfe2e3">
+<body bgcolor="e2fff4">
 
 
 <div class="container">
-    <img src = "agr2.png" class="image">
+    <img src = "agr.png" class="image">
     <button class="btn1"></button>
     <button class="btn2"></button>
     <button class="btn3"></button>
@@ -16,12 +17,13 @@
     <button class="btn5"></button>
     <button class="btn6"></button>
 
-    <div class="text1"><b>Услуги</b></div>
-    <div class="text2"><b>Цены</b></div>
-    <div class="text3"><b>Бронирование</b></div>
-    <div class="text4"><b>Контакты</b></div>
-    <div class="text5"><b>Фото</b></div>
-    <div class="text6"><b>О нас</b></div>
+    
+    <div class="text1"><b><a href="uslugi.html" target="_self">Услуги</a></b></div>
+    <div class="text2"><b><a href="ceny.html" target="_self">Цены</a></b></div>
+    <div class="text3"><b><a href="bronirovanie.html" target="_self">Бронирование</a></b></div>
+    <div class="text4"><b><a href="kontakty.html" target="_self">Контакты</a></b></div>
+    <div class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
+    <div class="text6"><b><a href="onas.html" target="_self">О нас</a></b></div>
 </div>
 
 
