--- a/bronirovanie.html
+++ b/bronirovanie.html
@@ -2,15 +2,33 @@
 <head>
   <title>Services</title>
   <link rel="stylesheet" href="style.css">
+  <script src="s.js"></script>
 </head>
 
 <body bgcolor="e2fff4">
 
 <div class="container">
     <img src = "agr.png" class="image">
+
+
+<form class="f">
+            <table><tr><td>Ваше имя *</td><td><input type="text" name="text1" id="text1"/></td></tr>
+            <tr><td>Контактный телефон *</td><td><input type="text" name="text2" id="text2"/></td></tr>
+            <tr><td>Дата заезда</td><td><input type="text" name="text3" id="text3"/></td></tr>
+            <tr><td>Дата выезда</td><td><input type="text" name="text4" id="text4"/></td></tr>
+            <tr><td>Количество человек</td><td><input type="text" name="text5" id="text5"/></td></tr>
+            <tr><td>Дополнительная информация</td><td><input type="text" name="text6" id="text6"/></td></tr>
+
+            <tr><td><input type="button" name="button1" onclick="vivod()" value="Отправить"/></td>
+<div class="txcl"><div class="v1"></div></div>
+        </form>
+
+
 </div>
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
+
+
 
 </body>
 </html>
