--- a/bronirovanie.html
+++ b/bronirovanie.html
@@ -10,19 +10,37 @@
 <div class="container">
     <img src = "agr.png" class="image">
 
+<div class="text9">Бронирование</div>
+
+<div class="text8">Заполните форму ниже, нажмите кнопку «Отправить».<br>
+Наши менеджеры с радостью произведут расчет стоимости услуг и свяжутся с Вами в кратчайшее время.</div>  
 
 <form class="f">
-            <table><tr><td>Ваше имя *</td><td><input type="text" name="text1" id="text1"/></td></tr>
-            <tr><td>Контактный телефон *</td><td><input type="text" name="text2" id="text2"/></td></tr>
-            <tr><td>Дата заезда</td><td><input type="text" name="text3" id="text3"/></td></tr>
-            <tr><td>Дата выезда</td><td><input type="text" name="text4" id="text4"/></td></tr>
-            <tr><td>Количество человек</td><td><input type="text" name="text5" id="text5"/></td></tr>
-            <tr><td>Дополнительная информация</td><td><input type="text" name="text6" id="text6"/></td></tr>
-
-            <tr><td><input type="button" name="button1" onclick="vivod()" value="Отправить"/></td>
 <div class="txcl"><div class="v1"></div></div>
-        </form>
 
+<table><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text1" id="text1" placeholder="Ваше имя *"></in-put></td></tr>
+
+<tr><td><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text2" id="text2" placeholder="Контактный телефон *"></in-put></td></tr>
+
+<tr><td><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text3" id="text3" placeholder="Дата заезда"></in-put></td></tr>
+
+<tr><td><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text4" id="text4" placeholder="Дата выезда"></in-put></td></tr>
+
+<tr><td><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text5" id="text5" placeholder="Количество человек"></in-put></td></tr>
+
+<tr><td><div class="opacity1"><div class="round1"></div></div>
+<in-put><input type="text" name="text6" id="text6" placeholder="Дополнительная информация"></in-put></td></tr>
+
+
+<tr><td><input type="button" name="button1" onclick="vivod()" value="Отправить"/></td></tr></table>
+
+            
+</form>
 
 </div>
 
