--- a/bronirovanie.html
+++ b/bronirovanie.html
@@ -8,43 +8,43 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <img src = "agr.png" class="image">
+    <div class="fix"><img src = "agr.png" class="image"></div>
 
 <div class="text9">Бронирование</div>
 
 <div class="text8">Заполните форму ниже, нажмите кнопку «Отправить».<br>
 Наши менеджеры с радостью произведут расчет стоимости услуг и свяжутся с Вами в кратчайшее время.</div>  
 
-<form class="f">
+
 <div class="txcl"><div class="v1"></div></div>
+<form class="f">
 
 <table><div class="opacity1"><div class="round1"></div></div>
 <in-put><input type="text" name="text1" id="text1" placeholder="Ваше имя *"></in-put></td></tr>
 
-<tr><td><div class="opacity1"><div class="round1"></div></div>
+<tr><td><div class="opacity1"><div class="round2"></div></div>
 <in-put><input type="text" name="text2" id="text2" placeholder="Контактный телефон *"></in-put></td></tr>
 
-<tr><td><div class="opacity1"><div class="round1"></div></div>
+<tr><td><div class="opacity1"><div class="round3"></div></div>
 <in-put><input type="text" name="text3" id="text3" placeholder="Дата заезда"></in-put></td></tr>
 
-<tr><td><div class="opacity1"><div class="round1"></div></div>
+<tr><td><div class="opacity1"><div class="round4"></div></div>
 <in-put><input type="text" name="text4" id="text4" placeholder="Дата выезда"></in-put></td></tr>
 
-<tr><td><div class="opacity1"><div class="round1"></div></div>
+<tr><td><div class="opacity1"><div class="round5"></div></div>
 <in-put><input type="text" name="text5" id="text5" placeholder="Количество человек"></in-put></td></tr>
 
-<tr><td><div class="opacity1"><div class="round1"></div></div>
+<tr><td><div class="opacity1"><div class="round6"></div></div>
 <in-put><input type="text" name="text6" id="text6" placeholder="Дополнительная информация"></in-put></td></tr>
 
-
 <tr><td><input type="button" name="button1" onclick="vivod()" value="Отправить"/></td></tr></table>
-
             
 </form>
 
 </div>
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
+
 
 
 
