--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <button class="btn6"></button>
 
     
-    <div class="text1"><b><a href="uslugi.html" target="_self">Услуги</a></b></div>
-    <div class="text2"><b><a href="ceny.html" target="_self">Цены</a></b></div>
-    <div class="text3"><b><a href="bronirovanie.html" target="_self">Бронирование</a></b></div>
-    <div class="text4"><b><a href="kontakty.html" target="_self">Контакты</a></b></div>
-    <div class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
-    <div class="text6"><b><a href="onas.html" target="_self">О нас</a></b></div>
-</div>
-
+    <div class="text1"><b><a href="uslugi.html"
+    target="_self">Услуги</a></b></div> <div class="text2"><b><a
+    href="ceny.html" target="_self">Цены</a></b></div> <div
+    class="text3"><b><a href="bronirovanie.html"
+    target="_self">Бронирование</a></b></div> <div class="text4"><b><a
+    href="kontakty.html" target="_self">Контакты</a></b></div> <div
+    class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
+    <div class="text6"><b><a href="onas.html" target="_self">О
+    нас</a></b></div> </div>
 
 </body>
 </html>
