--- a/uslugi.html
+++ b/uslugi.html
@@ -7,9 +7,46 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <img src = "agr.png" class="image">
-</div>
+    <div class="fix"><img src = "agr.png" class="image"></div>
 
+    <div class="text9">Услуги</div>
+
+
+<div class="round7"></div><div class="usl1">ПРОЖИВАНИЕ</div>
+<div class="usl2">Для размещения гостей на территории имеется 2 больших дома. Один из которых имеет три комнаты, сделанные в особом стиле. В каждой комнате имеется душевая и санузел, мини-кухня. В доме печки, которые согреют посетителей в любое время года. Второй дом – это двухэтажная баня с камином.
+Усадьба может сдаваться целиком без подселения других гостей. Детям до 6 лет проживание бесплатно. Снять весь дом на сутки цена договорная.</div>
+
+
+<div class="round8"></div><div class="usl3">ОРГАНИЗАЦИЯ ПИТАНИЯ</div>
+<div class="usl4">Хозяева усадьбы готов предложить вам попробовать вкусную традиционную белорусскую кухню, а также познакомиться с эксклюзивными авторскими блюдами. Основными поставщиками продуктов в усадьбу является собственная мини-ферма! Что помогает нам предлагать клиентам максимально натуральную и экологически чистую пищу.
+Клиентам комплекса доступно недорогое комплексное трехразовое питание с акцентом на традиционную кухню. Это простые понятные блюда, приготовленные с любовью, хорошие большие порции, качество. Никто у нас точно не останется голодным! Имеется возможность индивидуального питания из банкетного меню. По запросу доступно специальное детское питание для наших маленьких гостей.
+Банкетный зал 50 — 70 человек.</div>
+
+
+<div class="round9"></div><div class="usl5">РУССКАЯ БАНЯ С КАМИНОМ</div>
+<div class="usl6">К вашим услугам предоставляется традиционная русская баня с комнатой отдыха (обеденный стол 10-12 человек, музыка, триколор ТВ, диван, холодильник, микроволновая печь, чайник, кофеварка), удобной верандой!
+На втором этаже дома идеальное место для празднования семейных торжеств, карпаративов и вечеринок (до 30 человек).
+ВМЕСТИТЕЛЬНАЯ ПАРИЛКА позволяет одновременно париться 6-8 людям.
+Душевая оборудована одной душевой стойкой! Большой электробойлер на 100 л. обеспечит горячей водой любую компанию, купель с холодной водой позволит испытать всю прелесть контрастного душа.
+В бане есть комфортабельный санузел. Баня имеет просторную террасу с прекрасным видом на которой так приятно насладиться окружающей природой после целебного сеанса с душистым березовым веником.</div>
+
+
+<div class="round10"></div><div class="usl7">РАЗНООБРАЗНЫЙ ДОСУГ</div>
+<div class="usl8">
+  <ul>
+    <li>тихое уютное местечко для молодой пары;</li>
+    <li>конная прогулка по местности;</li>
+    <li>велоспорт по лесным тропинкам;</li>
+    <li>комфортные условия проживания для короткого визита и длительного отпуска в тёплое и холодное время года ( гостям предоставляется постельное бельё, полотенца, посуда, дрова);</li>
+    <li>доступ в интернет, спутниковое триколор ТВ и музыка не дадут гостям заскучать;</li>
+    <li>разрешается с собой брать на отдых домашних животных;</li>
+    <li>имеется стоянка для автомобилей;</li>
+    <li>интересная и насыщенная программа, а также экскурсии по местности и Брестской области;</li>
+    <li>чай из натуральных трав и натуральный кофе;</li>
+    <li>площадка с мангалами для шашлыка, казан для ухи.</li>
+</ul></div>
+
+</div>
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
 
 </body>
