--- a/onas.html
+++ b/onas.html
@@ -7,7 +7,9 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <img src = "agr.png" class="image">
+    <div class="fix"><img src = "agr.png" class="image"></div>
+
+    <div class="text9">О нас</div>
 </div>
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
