--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,32 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <img src = "agr.png" class="image">
+    <div class="fix"><img src = "agr.png" class="image"></div>
+
+    <div class="text9">Фото</div>
+
+
+<div class="slider-container">
+    <div class="slider">
+      <img src="1.jpg">
+      <img src="2.jpg">
+      <img src="3.jpg">
+      <img src="4.jpg">
+      <img src="5.jpg">
+      <img src="6.jpg">
+      <img src="7.jpg">
+      <img src="8.jpg">
+      <img src="9.jpg">
+      <img src="10.jpg">
+      <img src="11.jpg">
+      <img src="12.jpg">
+    </div>
+    <button class="prev-button" aria-label="Предыдущий слайд">&lt;</button>
+    <button class="next-button" aria-label="Следующий слайд">&gt</button>
+  </div>
+
+
+
 </div>
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
