--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 
 <div class="container">
-    <img src = "agr.png" class="image">
+    <div class="fix"><img src = "agr.png" class="image"></div>
+
     <button class="btn1"></button>
     <button class="btn2"></button>
     <button class="btn3"></button>
@@ -25,8 +26,9 @@
     target="_self">Бронирование</a></b></div> <div class="text4"><b><a
     href="kontakty.html" target="_self">Контакты</a></b></div> <div
     class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
-    <div class="text6"><b><a href="onas.html" target="_self">О
-    нас</a></b></div> </div>
+    <div class="text6"><b><a href="onas.html" target="_self">Онас</a></b></div> 
+  </div>
 
+  
 </body>
 </html>
