--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,9 @@
 <head>
   <title>Services</title>
   <link rel="stylesheet" href="style.css">
+  <script src="s.js"></script>
+<link rel="stylesheet" href="path/to/lightbox.min.css">
+<script src="path/to/lightbox.min.js"></script>
 </head>
 
 <body bgcolor="e2fff4">
@@ -10,33 +13,187 @@
     <div class="fix"><img src = "agr.png" class="image"></div>
 
     <div class="text9">Фото</div>
-<<<<<<< HEAD
 
-
-<div class="slider-container">
-    <div class="slider">
-      <img src="1.jpg">
-      <img src="2.jpg">
-      <img src="3.jpg">
-      <img src="4.jpg">
-      <img src="5.jpg">
-      <img src="6.jpg">
-      <img src="7.jpg">
-      <img src="8.jpg">
-      <img src="9.jpg">
-      <img src="10.jpg">
-      <img src="11.jpg">
-      <img src="12.jpg">
-    </div>
-    <button class="prev-button" aria-label="Предыдущий слайд">&lt;</button>
-    <button class="next-button" aria-label="Следующий слайд">&gt</button>
-  </div>
-
-
-
-=======
->>>>>>> 20e64ade9c60d6a13daa4fa46aaaf34db64ce11c
 </div>
+
+
+<a href="#img1">
+<div class="layer1"><img width="200px" height="150px" src="1.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img1">
+  <span style="background-image: url('1.jpg')"></span>
+</a>
+
+<a href="#img2">
+<div class="layer2"><img width="200px" height="150px" src="2.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img2">
+  <span style="background-image: url('2.jpg')"></span>
+</a>
+
+<a href="#img3">
+<div class="layer3"><img width="200px" height="150px" src="3.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img3">
+  <span style="background-image: url('3.jpg')"></span>
+</a>
+
+<a href="#img4">
+<div class="layer4"><img width="200px" height="150px" src="4.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img4">
+  <span style="background-image: url('4.jpg')"></span>
+</a>
+
+<a href="#img5">
+<div class="layer5"><img width="200px" height="150px" src="5.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img5">
+  <span style="background-image: url('5.jpg')"></span>
+</a>
+
+<a href="#img6">
+<div class="layer6"><img width="200px" height="150px" src="6.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img6">
+  <span style="background-image: url('6.jpg')"></span>
+</a>
+
+<a href="#img7">
+<div class="layer7"><img width="200px" height="150px" src="7.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img7">
+  <span style="background-image: url('7.jpg')"></span>
+</a>
+
+<a href="#img8">
+<div class="layer8"><img width="200px" height="150px" src="8.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img8">
+  <span style="background-image: url('8.jpg')"></span>
+</a>
+
+<a href="#img9">
+<div class="layer9"><img width="200px" height="150px" src="9.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img9">
+  <span style="background-image: url('9.jpg')"></span>
+</a>
+
+<a href="#img10">
+<div class="layer10"><img width="200px" height="150px" src="10.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img10">
+  <span style="background-image: url('10.jpg')"></span>
+</a>
+
+<a href="#img11">
+<div class="layer11"><img width="200px" height="150px" src="11.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img11">
+  <span style="background-image: url('11.jpg')"></span>
+</a>
+
+<a href="#img12">
+<div class="layer12"><img width="200px" height="150px" src="12.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img12">
+  <span style="background-image: url('12.jpg')"></span>
+</a>
+
+<a href="#img13">
+<div class="layer13"><img width="200px" height="150px" src="13.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img13">
+  <span style="background-image: url('13.jpg')"></span>
+</a>
+
+<a href="#img14">
+<div class="layer14"><img width="200px" height="150px" src="14.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img14">
+  <span style="background-image: url('14.jpg')"></span>
+</a>
+
+<a href="#img15">
+<div class="layer15"><img width="200px" height="150px" src="15.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img15">
+  <span style="background-image: url('15.jpg')"></span>
+</a>
+
+<a href="#img16">
+<div class="layer16"><img width="200px" height="150px" src="16.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img16">
+  <span style="background-image: url('16.jpg')"></span>
+</a>
+
+<a href="#img17">
+<div class="layer17"><img width="200px" height="150px" src="17.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img17">
+  <span style="background-image: url('17.jpg')"></span>
+</a>
+
+<a href="#img18">
+<div class="layer18"><img width="200px" height="150px" src="18.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img18">
+  <span style="background-image: url('18.jpg')"></span>
+</a>
+
+<a href="#img19">
+<div class="layer19"><img width="200px" height="150px" src="19.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img19">
+  <span style="background-image: url('19.jpg')"></span>
+</a>
+
+<a href="#img20">
+<div class="layer20"><img width="200px" height="150px" src="20.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img20">
+  <span style="background-image: url('20.jpg')"></span>
+</a>
+
+<a href="#img21">
+<div class="layer21"><img width="200px" height="150px" src="21.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img21">
+  <span style="background-image: url('21.jpg')"></span>
+</a>
+
+<a href="#img22">
+<div class="layer22"><img width="200px" height="150px" src="22.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img22">
+  <span style="background-image: url('22.jpg')"></span>
+</a>
+
+<a href="#img23">
+<div class="layer23"><img width="200px" height="150px" src="23.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img23">
+  <span style="background-image: url('23.jpg')"></span>
+</a>
+
+<a href="#img24">
+<div class="layer24"><img width="200px" height="150px" src="24.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img24">
+  <span style="background-image: url('24.jpg')"></span>
+</a>
+
+
+<a href="#img0">
+<div class="layer0"><img width="200px" height="150px" src="24.jpg"></div>
+</a>
+<a href="#" class="lightbox" id="img0">
+  <span style="background-image: url('24.jpg')"></span>
+</a>
+
+
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
 
