--- a/photo.html
+++ b/photo.html
@@ -3,8 +3,7 @@
   <title>Services</title>
   <link rel="stylesheet" href="style.css">
   <script src="s.js"></script>
-<link rel="stylesheet" href="path/to/lightbox.min.css">
-<script src="path/to/lightbox.min.js"></script>
+
 </head>
 
 <body bgcolor="e2fff4">
@@ -21,7 +20,87 @@
 <div class="layer1"><img width="200px" height="150px" src="1.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img1">
-  <span style="background-image: url('1.jpg')"></span>
+
+  <div class="wrapper">
+  <input type="radio" name="point" id="slide1" checked>
+  <input type="radio" name="point" id="slide2">
+  <input type="radio" name="point" id="slide3">
+  <input type="radio" name="point" id="slide4">
+  <input type="radio" name="point" id="slide5">
+  <input type="radio" name="point" id="slide6">
+  <input type="radio" name="point" id="slide7">
+  <input type="radio" name="point" id="slide8">
+  <input type="radio" name="point" id="slide9">
+  <input type="radio" name="point" id="slide10">
+  <input type="radio" name="point" id="slide11">
+  <input type="radio" name="point" id="slide12">
+  <input type="radio" name="point" id="slide13">
+  <input type="radio" name="point" id="slide14">
+  <input type="radio" name="point" id="slide15">
+  <input type="radio" name="point" id="slide16">
+  <input type="radio" name="point" id="slide17">
+  <input type="radio" name="point" id="slide18">
+  <input type="radio" name="point" id="slide19">
+  <input type="radio" name="point" id="slide20">
+  <input type="radio" name="point" id="slide21">
+  <input type="radio" name="point" id="slide22">
+  <input type="radio" name="point" id="slide23">
+  <input type="radio" name="point" id="slide24">
+
+  <div class="slider">
+    <div class="slides slide1"></div>
+    <div class="slides slide2"></div>
+    <div class="slides slide3"></div>
+    <div class="slides slide4"></div>
+    <div class="slides slide5"></div>
+    <div class="slides slide6"></div>
+    <div class="slides slide7"></div>
+    <div class="slides slide8"></div>
+    <div class="slides slide9"></div>
+    <div class="slides slide10"></div>    
+    <div class="slides slide11"></div>
+    <div class="slides slide12"></div>
+    <div class="slides slide13"></div>
+    <div class="slides slide14"></div>
+    <div class="slides slide15"></div>    
+    <div class="slides slide16"></div>
+    <div class="slides slide17"></div>
+    <div class="slides slide18"></div>
+    <div class="slides slide19"></div>
+    <div class="slides slide20"></div>    
+    <div class="slides slide21"></div>
+    <div class="slides slide22"></div>
+    <div class="slides slide23"></div>
+    <div class="slides slide24"></div>
+  </div>  
+  <div class="controls">
+    <label for="slide1"></label>
+    <label for="slide2"></label>
+    <label for="slide3"></label>
+    <label for="slide4"></label>
+    <label for="slide5"></label>
+    <label for="slide6"></label>
+    <label for="slide7"></label>
+    <label for="slide8"></label>
+    <label for="slide9"></label>
+    <label for="slide10"></label>
+    <label for="slide11"></label>
+    <label for="slide12"></label>
+    <label for="slide13"></label>
+    <label for="slide14"></label>
+    <label for="slide15"></label>
+    <label for="slide16"></label>
+    <label for="slide17"></label>
+    <label for="slide18"></label>
+    <label for="slide19"></label>
+    <label for="slide20"></label>
+    <label for="slide21"></label>
+    <label for="slide22"></label>
+    <label for="slide23"></label>
+    <label for="slide24"></label>
+  </div>
+</div>
+
 </a>
 
 <a href="#img2">
@@ -182,7 +261,7 @@
 <div class="layer24"><img width="200px" height="150px" src="24.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img24">
-  <span style="background-image: url('24.jpg')"></span>
+<span style="background-image: url('24.jpg')"></span>
 </a>
 
 
@@ -192,6 +271,7 @@
 <a href="#" class="lightbox" id="img0">
   <span style="background-image: url('24.jpg')"></span>
 </a>
+
 
 
 
