--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><img src = "agr.png" class="image"></div>
+    <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
     <div class="text9">Фото</div>
 
@@ -20,143 +20,63 @@
 <div class="layer1"><img width="200px" height="150px" src="1.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img1">
-
-  <div class="wrapper">
-  <input type="radio" name="point" id="slide1" checked>
-  <input type="radio" name="point" id="slide2">
-  <input type="radio" name="point" id="slide3">
-  <input type="radio" name="point" id="slide4">
-  <input type="radio" name="point" id="slide5">
-  <input type="radio" name="point" id="slide6">
-  <input type="radio" name="point" id="slide7">
-  <input type="radio" name="point" id="slide8">
-  <input type="radio" name="point" id="slide9">
-  <input type="radio" name="point" id="slide10">
-  <input type="radio" name="point" id="slide11">
-  <input type="radio" name="point" id="slide12">
-  <input type="radio" name="point" id="slide13">
-  <input type="radio" name="point" id="slide14">
-  <input type="radio" name="point" id="slide15">
-  <input type="radio" name="point" id="slide16">
-  <input type="radio" name="point" id="slide17">
-  <input type="radio" name="point" id="slide18">
-  <input type="radio" name="point" id="slide19">
-  <input type="radio" name="point" id="slide20">
-  <input type="radio" name="point" id="slide21">
-  <input type="radio" name="point" id="slide22">
-  <input type="radio" name="point" id="slide23">
-  <input type="radio" name="point" id="slide24">
-
-  <div class="slider">
-    <div class="slides slide1"></div>
-    <div class="slides slide2"></div>
-    <div class="slides slide3"></div>
-    <div class="slides slide4"></div>
-    <div class="slides slide5"></div>
-    <div class="slides slide6"></div>
-    <div class="slides slide7"></div>
-    <div class="slides slide8"></div>
-    <div class="slides slide9"></div>
-    <div class="slides slide10"></div>    
-    <div class="slides slide11"></div>
-    <div class="slides slide12"></div>
-    <div class="slides slide13"></div>
-    <div class="slides slide14"></div>
-    <div class="slides slide15"></div>    
-    <div class="slides slide16"></div>
-    <div class="slides slide17"></div>
-    <div class="slides slide18"></div>
-    <div class="slides slide19"></div>
-    <div class="slides slide20"></div>    
-    <div class="slides slide21"></div>
-    <div class="slides slide22"></div>
-    <div class="slides slide23"></div>
-    <div class="slides slide24"></div>
-  </div>  
-  <div class="controls">
-    <label for="slide1"></label>
-    <label for="slide2"></label>
-    <label for="slide3"></label>
-    <label for="slide4"></label>
-    <label for="slide5"></label>
-    <label for="slide6"></label>
-    <label for="slide7"></label>
-    <label for="slide8"></label>
-    <label for="slide9"></label>
-    <label for="slide10"></label>
-    <label for="slide11"></label>
-    <label for="slide12"></label>
-    <label for="slide13"></label>
-    <label for="slide14"></label>
-    <label for="slide15"></label>
-    <label for="slide16"></label>
-    <label for="slide17"></label>
-    <label for="slide18"></label>
-    <label for="slide19"></label>
-    <label for="slide20"></label>
-    <label for="slide21"></label>
-    <label for="slide22"></label>
-    <label for="slide23"></label>
-    <label for="slide24"></label>
-  </div>
-</div>
-
+<span style="background-image: url('1.jpg')"></span>
 </a>
 
 <a href="#img2">
 <div class="layer2"><img width="200px" height="150px" src="2.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img2">
-  <span style="background-image: url('2.jpg')"></span>
+<span style="background-image: url('2.jpg')"></span>
 </a>
 
 <a href="#img3">
 <div class="layer3"><img width="200px" height="150px" src="3.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img3">
-  <span style="background-image: url('3.jpg')"></span>
+<span style="background-image: url('3.jpg')"></span>
 </a>
 
 <a href="#img4">
 <div class="layer4"><img width="200px" height="150px" src="4.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img4">
-  <span style="background-image: url('4.jpg')"></span>
+<span style="background-image: url('4.jpg')"></span>
 </a>
 
 <a href="#img5">
 <div class="layer5"><img width="200px" height="150px" src="5.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img5">
-  <span style="background-image: url('5.jpg')"></span>
+<span style="background-image: url('5.jpg')"></span>
 </a>
 
 <a href="#img6">
 <div class="layer6"><img width="200px" height="150px" src="6.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img6">
-  <span style="background-image: url('6.jpg')"></span>
+<span style="background-image: url('6.jpg')"></span>
 </a>
 
 <a href="#img7">
 <div class="layer7"><img width="200px" height="150px" src="7.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img7">
-  <span style="background-image: url('7.jpg')"></span>
+<span style="background-image: url('7.jpg')"></span>
 </a>
 
 <a href="#img8">
 <div class="layer8"><img width="200px" height="150px" src="8.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img8">
-  <span style="background-image: url('8.jpg')"></span>
+<span style="background-image: url('8.jpg')"></span>
 </a>
 
 <a href="#img9">
 <div class="layer9"><img width="200px" height="150px" src="9.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img9">
-  <span style="background-image: url('9.jpg')"></span>
+<span style="background-image: url('9.jpg')"></span>
 </a>
 
 <a href="#img10">
