--- a/uslugi.html
+++ b/uslugi.html
@@ -7,9 +7,10 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><img src = "agr.png" class="image"></div>
+    <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
     <div class="text9">Услуги</div>
+
 
 
 <div class="round7"></div><div class="usl1">ПРОЖИВАНИЕ</div>
