--- a/kontakty.html
+++ b/kontakty.html
@@ -7,10 +7,14 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><img src = "agr.png" class="image"></div>
+    <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
     <div class="text9">Контакты</div>
+
 </div>
+
+<div class="layer25">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d618.0807802969282!2d26.939661492528668!3d53.44342308807384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d91343db7d5113%3A0xc608787b7ad7820!2z0KPRgdCw0LTRjNCx0LAgR3JlZW4gSG91c2U!5e1!3m2!1sru!2sby!4v1711395917346!5m2!1sru!2sby" width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
 <div class="text7"><b><a href="index.html" target="_self">🏡</a></b></div>
 
