--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
     <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
     <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
+    <img width="160px" height="100px" style="position: absolute; top: 7px; left: 20px;" src="logo.png">
+
 </body>
 </html>
